# review-robin-web

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_SPEC.md  LICENSE  README.md  TECH_STACK.md  alembic.ini  assumptions.md  azure_ask.md  deployment_dev.md  localrun.bat  localrun.ps1  pyproject.toml  requirements.txt  rrw_design_rationale.md
alembic/: env.py
app/: __init__.py  config.py  logging_config.py  main.py
doc/: deployment_dev.md  segment_04_core_data_model_migrations_plan.md  segment_07_assignment_generation_mvp_plan.md  segment_10_export_audit_retention_mvp_plan.md  segment_11_rulebased_assignment_builder_plan.md  segment_13_production_hardening_plan.md  segment_1_repository_setup_plan.md  segment_5_operator_session_setup_mvp_plan.md  segment_9_invitation_monitoring_reminder_mvp_plan.md
docs/: README.md  authentication.md  azure_github_setup.md  azure_provision.md  backup_restore.md  cli_setup.md  cli_setup_notes.md  database.md  deployment_dev.md  imports.md  known_limitations.md  local_setup.md  operations_runbook.md  security_posture.md  status.md  troubleshooting.md
guide/: README.md  adhoc_todo.md  all_buttons.md  assumptions.md  clean_up.md  codebase_assessment_01jun.md  codebase_assessment_03jun.md  codebase_assessment_09may.md  codebase_assessment_11may.md  codebase_assessment_16may.md  codebase_assessment_17may.md  codebase_assessment_18may.md  codebase_assessment_19may.md  codebase_assessment_28may.md  codebase_assessment_30may.md  deferred_infra.md  deferred_until_pilot_feedback.md  instruments.md  (+138 more)
(+788 files in other folders)
